plugins {
	id 'java'
	id 'io.quarkus'
	id "io.freefair.lombok" version "8.4"
}

group 'com.ebp.openQuarterMaster'
version '1.0.40'

repositories {
	mavenCentral()
	mavenLocal()
	//for getting OQM Library snapshot versions
	maven({url= "https://s01.oss.sonatype.org/content/repositories/snapshots/"})
}

dependencies {
	implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
	implementation 'io.quarkus:quarkus-resteasy-reactive'
	implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
	implementation 'io.quarkus:quarkus-resteasy-reactive-qute'
	implementation 'io.quarkus:quarkus-smallrye-openapi'
//	implementation 'io.quarkus:quarkus-smallrye-jwt'// https://quarkus.io/guides/security-properties
	implementation 'io.quarkus:quarkus-smallrye-jwt-build'
	implementation 'io.quarkus:quarkus-smallrye-health'
	implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
	implementation 'io.quarkus:quarkus-opentelemetry'
	implementation 'io.quarkus:quarkus-config-yaml'
	implementation 'io.quarkus:quarkus-qute'
	implementation 'io.quarkus:quarkus-mongodb-panache'
	implementation 'io.quarkus:quarkus-hibernate-validator'
	implementation 'io.quarkus:quarkus-elytron-security'
	implementation 'io.quarkus:quarkus-container-image-jib'
	implementation 'io.quarkus:quarkus-rest-client-reactive'
	implementation 'io.quarkus:quarkus-rest-client-reactive-jackson'
	implementation 'io.quarkus:quarkus-mailer'
	implementation 'io.quarkus:quarkus-scheduler'
	implementation 'io.quarkus:quarkus-oidc'
//	implementation 'io.quarkus:quarkus-oidc-client-reactive-filter'
//	implementation 'io.quarkus:quarkus-oidc-token-propagation-reactive'

	//implementation 'io.opentelemetry.instrumentation:opentelemetry-mongo-3.1:1.24.0-alpha'
	// https://quarkus.io/guides/logging
	implementation 'org.jboss.slf4j:slf4j-jboss-logmanager'

	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
	implementation 'com.fasterxml.jackson.module:jackson-module-blackbird'


	implementation group: 'org.jsoup', name: 'jsoup', version: '1.17.2'
	implementation 'org.passay:passay:1.6.4'
	implementation 'com.itextpdf:html2pdf:5.0.2'

	//webjars
	implementation 'org.webjars:jquery:3.7.1'
	implementation 'org.webjars:bootstrap:5.3.2'
//	implementation 'org.webjars.npm:bootstrap-icons:1.10.2' //doesn't contain everything needed
//    implementation 'org.webjars:js-cookie:2.2.1' //out of date
//    implementation 'org.webjars:spin-js:2.1.0'

//	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-core:1.0.62'
	implementation 'tech.epic-breakfast-productions.openQuarterMaster.lib:open-qm-lib-moduleDriver:1.0.2-DEV'

	// https://mvnrepository.com/artifact/tech.units/indriya
	//     https://unitsofmeasurement.gitbook.io/uom-guide/getting-started/getting-started-with-indriya
	implementation 'tech.units:indriya:2.2'
	implementation 'systems.uom:systems-common:2.1'
	// https://mvnrepository.com/artifact/tech.uom.lib/uom-lib-jackson
	implementation 'tech.uom.lib:uom-lib-jackson:2.1'

	implementation 'org.apache.commons:commons-lang3:3.14.0'
	implementation 'org.apache.commons:commons-compress:1.25.0'
	implementation 'org.apache.commons:commons-csv:1.10.0'
	implementation 'org.apache.commons:commons-io:1.3.2'
	implementation 'commons-codec:commons-codec:1.16.0'
	implementation 'org.apache.tika:tika-core:2.9.1'

	implementation 'uk.org.okapibarcode:okapibarcode:0.4.1'

	/*
	Test Dependencies
	 */
	testImplementation group: 'io.quarkus', name: 'quarkus-junit5'
	testImplementation group: 'io.quarkus', name: 'quarkus-jacoco' // https://quarkus.io/guides/tests-with-coverage
	testImplementation group: 'io.rest-assured', name: 'rest-assured'
	testImplementation 'io.quarkus:quarkus-keycloak-admin-client-reactive'
	testImplementation 'net.datafaker:datafaker:2.1.0'
	testImplementation 'org.assertj:assertj-core:3.25.3'

//	testImplementation 'com.github.dasniko:testcontainers-keycloak:2.5.0'
	//2.1.2 seems dud, fails to start & null pointers
//	testImplementation 'org.keycloak:keycloak-admin-client:21.1.1'
	// 17.0.1 seems dud, might be related to keycloak issue
	testImplementation 'io.jaegertracing:jaeger-testcontainers:0.7.0'

	testImplementation 'org.seleniumhq.selenium:selenium-java:4.16.1'
	testImplementation 'org.testcontainers:selenium:1.19.3'
	testImplementation 'com.deque:axe-selenium:3.0'
}

java {
	java {
		toolchain {
			languageVersion.set(JavaLanguageVersion.of(17))
		}
	}
}

compileJava {
	options.encoding = 'UTF-8'
	options.compilerArgs << '-parameters'
}

compileTestJava {
	options.encoding = 'UTF-8'
}

test {
	minHeapSize = "128m" // initial heap size
	maxHeapSize = "2g" // maximum heap size
	jvmArgs(
		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
		"--add-opens", "java.base/java.io=ALL-UNNAMED",
		"--add-opens", "java.base/java.util=ALL-UNNAMED",
		"--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED"
	)
	testLogging.showStandardStreams = true
}

/**
 * Used to print the current version of this project.
 *
 * Used by the `makeInstallers.sh` script to get the version.
 */
tasks.register('printVersion') {
	doLast {
		println project.version
	}
}

